[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/character/tabs/components/StatRow.gd" id="1_0"]
[ext_resource type="Theme" path="res://themes/bg3_theme.tres" id="2_0"]

[node name="StatRow" type="HBoxContainer"]
theme = ExtResource("2_0")
script = ExtResource("1_0")

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(150, 0)
theme_override_font_sizes/font_size = 18
text = "Stat Name"
horizontal_alignment = 0

[node name="ValueLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(100, 0)
theme_override_font_sizes/font_size = 18
text = "18 (+4)"
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
value = 18.0
min_value = 1.0
max_value = 20.0
show_percentage = false

